fix ui grid render wrong width

--- a/app/styles/_report.scss
+++ b/app/styles/_report.scss
@@ -581,8 +581,8 @@ $badge-bad: #FF6D69;
     font-size: 11px;
 }
 
-.grid-report{
-    min-width: 743px;
+.grid-summary{
+    width: 100%;
 }
 
 .daterangepicker{
